# m5stick_apps

./: README.md
module_evaluation/: Cargo.toml  README.md  wifi.md
module_evaluation/.cargo/: config.toml
sobu_line_notifier/: .gitignore  Cargo.toml
sobu_line_notifier/src/: lib.rs  ntp.rs  timetable.rs  wifi.rs
