[package]
edition      = "2024"
name         = "sobu_line_notifier"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "sobu_line_notifier"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }

embassy-executor = { version = "0.9.1" }
embassy-time     = { version = "0.5.0" }
esp-alloc        = { version = "0.9.0" }
esp-println      = { version = "0.16.1", features = ["esp32", "log-04"] }
log = "0.4"

critical-section       = "1.2.0"
embedded-graphics      = "0.8.1"
embedded-graphics-core = "0.4.1"
embedded-hal-bus       = "0.2.0"
mipidsi                = "0.10.0"
static_cell            = "2.1.1"
heapless               = "0.8.0"

embassy-net = { version = "0.7.1", features = [
  "dhcpv4",
  "dns",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.7.1" }
embedded-io-async = { version = "0.7.0" }
esp-radio = { version = "0.17.0", features = [
  "esp-alloc",
  "esp32",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
